[package]
name = "hydroflow_datalog_core"
publish = true
version = "0.8.0"
edition = "2021"
license = "Apache-2.0"
documentation = "https://docs.rs/hydroflow_datalog_core/"
description = "Datalog implementation for Hydroflow"

[lib]
path = "src/lib.rs"

[features]
default = []
diagnostics = [ "hydroflow_lang/diagnostics" ]

[dependencies]
quote = "1.0.35"
slotmap = "1.0.0"
syn = { version = "2.0.46", features = [ "parsing", "extra-traits" ] }
proc-macro2 = "1.0.74"
rust-sitter = "0.4.2"
hydroflow_lang = { path = "../hydroflow_lang", version = "^0.8.0" }

[build-dependencies]
rust-sitter-tool = "0.4.2"

[dev-dependencies]
insta = "1.39"
prettyplease = "0.2.0"
tempfile = "3"
