[package]
name = "hydroflow_internalmacro"
publish = true
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
documentation = "https://docs.rs/hydroflow_internalmacro/"
description = "Internal macros used in Hydroflow's codebase"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.0"
proc-macro-crate = "1.1.0"
quote = "1.0.0"
syn = { version = "2.0.0", features = [ "parsing", "extra-traits", "full" ] }
