[package]
name = "hydroflow_lang"
publish = true
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
documentation = "https://docs.rs/hydroflow_lang/"
description = "Hydroflow's Surface Syntax implementation"

[features]
default = []
diagnostics = []
debugging = [ "dep:data-encoding", "dep:webbrowser" ]

[dependencies]
auto_impl = "1.0.1"
data-encoding = { version = "2.4.0", optional = true }
itertools = "0.10" # TODO(mingwei): remove when `iter_intersperse` is stabilized.
prettyplease = { version = "0.2.0", features = [ "verbatim" ] }
proc-macro2 = { version = "1.0.63", features = ["span-locations"] }
quote = "1.0.0"
regex = "1.7.0"
serde = "1.0.1"
serde_json = "1.0.8"
slotmap = { version = "1.0.6", features = ["serde"] }
syn = { version = "2.0.0", features = [ "extra-traits", "full", "parsing" ] }
webbrowser = { version = "0.8.11", optional = true }

[dev-dependencies]

[build-dependencies]
syn = { version = "2.0.0", features = [ "extra-traits", "full", "parsing" ] }
