[package]
name = "hydroflow_lang"
publish = true
version = "0.8.0"
edition = "2021"
license = "Apache-2.0"
documentation = "https://docs.rs/hydroflow_lang/"
description = "Hydroflow's Surface Syntax implementation"

[features]
default = []
diagnostics = []
debugging = [ "dep:data-encoding", "dep:webbrowser", "clap-derive" ]
clap-derive = [ "dep:clap" ]

[dependencies]
auto_impl = "1.0.0"
clap = { version = "4.5.4", features = [ "derive" ], optional = true }
data-encoding = { version = "2.0.0", optional = true }
itertools = "0.10.0" # TODO(mingwei): remove when `iter_intersperse` is stabilized.
prettyplease = { version = "0.2.0", features = [ "verbatim" ] }
proc-macro2 = { version = "1.0.74", features = [ "span-locations" ] }
quote = "1.0.35"
serde = "1.0.197"
serde_json = "1.0.115"
slotmap = { version = "1.0.0", features = ["serde"] }
syn = { version = "2.0.46", features = [ "extra-traits", "full", "parsing" ] }
webbrowser = { version = "1.0.0", optional = true }

[dev-dependencies]

[build-dependencies]
syn = { version = "2.0.46", features = [ "extra-traits", "full", "parsing" ] }
