[package]
name = "hydroflow_macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
# Note: If we ever compile this proc macro crate to WASM (e.g., if we are
# building on a WASM host), we may need to turn diagnostics off for WASM if
# proc_macro2 still does not support WASM.
hydroflow_lang = { path = "../hydroflow_lang", features = [ "diagnostics" ] }
proc-macro2 = "1.0.0"
proc-macro-crate = "1.1.0"
quote = "1.0.0"
syn = { version = "2.0.0", features = [ "parsing", "extra-traits" ] }

[build-dependencies]
hydroflow_lang = { path = "../hydroflow_lang" }
quote = "1.0.0"
