[package]
name = "hydroflow_macro"
publish = true
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
documentation = "https://docs.rs/hydroflow_macro/"
description = "Macro for using Hydroflow's Surface Syntax"

[lib]
proc-macro = true

[features]
diagnostics = [ "hydroflow_lang/diagnostics" ]

[dependencies]
# Note: If we ever compile this proc macro crate to WASM (e.g., if we are
# building on a WASM host), we may need to turn diagnostics off for WASM if
# proc_macro2 still does not support WASM.
hydroflow_lang = { path = "../hydroflow_lang", version = "^0.4.0" }
proc-macro2 = "1.0.57"
proc-macro-crate = "1.1.0"
quote = "1.0.0"
syn = { version = "2.0.0", features = [ "parsing", "extra-traits" ] }

[build-dependencies]
hydroflow_lang = { path = "../hydroflow_lang", version = "^0.4.0" }
itertools = "0.10"
quote = "1.0.0"
