[package]
name = "hydroflow_plus"
publish = true
version = "0.9.0"
edition = "2021"
license = "Apache-2.0"
documentation = "https://docs.rs/hydroflow_plus/"
description = "Functional programming API for hydroflow"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[features]
diagnostics = [ "hydroflow_lang/diagnostics" ]
deploy_integration = [ "hydroflow/deploy_integration" ]
stageleft_devel = []

[dependencies]
quote = "1.0.35"
syn = { version = "2.0.46", features = [ "parsing", "extra-traits", "visit-mut" ] }
proc-macro2 = "1.0.74"
proc-macro-crate = "1.0.0"
hydroflow = { path = "../hydroflow", version = "^0.9.0", default-features = false }
hydroflow_lang = { path = "../hydroflow_lang", version = "^0.9.0" }
serde = "1.0.197"
bincode = "1.3.1"
stageleft = { path = "../stageleft", version = "^0.4.0" }

# added to workaround `cargo smart-release` https://github.com/Byron/cargo-smart-release/issues/16
stageleft_tool = { path = "../stageleft_tool", version = "^0.3.0", optional = true }

[build-dependencies]
stageleft_tool = { path = "../stageleft_tool", version = "^0.3.0" }

[dev-dependencies]
insta = "1.39"
