[package]
name = "hydroflow_plus"
publish = true
version = "0.9.0"
edition = "2021"
license = "Apache-2.0"
documentation = "https://docs.rs/hydroflow_plus/"
description = "Functional programming API for hydroflow"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[features]
default = ["deploy"]
diagnostics = [ "hydroflow_lang/diagnostics" ]
stageleft_devel = []
deploy = [ "hydroflow/deploy_integration", "dep:hydro_deploy", "dep:trybuild-internals-api", "dep:toml", "dep:prettyplease" ]

[dependencies]
quote = "1.0.35"
syn = { version = "2.0.46", features = [ "parsing", "extra-traits", "visit-mut" ] }
proc-macro2 = "1.0.74"
proc-macro-crate = "1.0.0"
hydroflow = { path = "../hydroflow", version = "^0.9.0", default-features = false }
hydroflow_lang = { path = "../hydroflow_lang", version = "^0.9.0" }
serde = { version = "1.0.197", features = [ "derive" ] }
bincode = "1.3.1"
tokio = { version = "1.29.0", features = [ "full" ] }
stageleft = { path = "../stageleft", version = "^0.4.0" }

nameof = "1.0.0"
sha2 = "0.10.0"
stageleft_tool = { path = "../stageleft_tool", version = "^0.3.0" }
hydro_deploy = { path = "../hydro_deploy/core", version = "^0.9.0", optional = true }
prettyplease = { version = "0.2.0", features = [ "verbatim" ], optional = true }
toml = { version = "0.8.0", optional = true }
trybuild-internals-api = { version = "1.0.99", optional = true }

[build-dependencies]
stageleft_tool = { path = "../stageleft_tool", version = "^0.3.0" }

[dev-dependencies]
insta = "1.39"
hydro_deploy = { path = "../hydro_deploy/core", version = "^0.9.0" }
async-ssh2-lite = { version = "0.5.0", features = ["vendored-openssl"] }
