[package]
name = "hydroflow_plus_cli_integration"
publish = false
version = "0.5.0"
edition = "2021"

[dependencies]
stageleft = { path = "../stageleft", version = "^0.1.0" }
hydroflow_plus = { path = "../hydroflow_plus", version = "^0.5.0" }
hydro_cli = { path = "../hydro_cli", version = "^0.5.0" }
tokio = { version = "1.16", features = [ "full" ] }
