[package]
name = "hydroflow_plus_cli_integration"
publish = false
version = "0.5.0"
edition = "2021"

[features]
default = []
deploy = [ "hydro_cli" ]

[dependencies]
stageleft = { path = "../stageleft", version = "^0.1.0" }
hydroflow_plus = { path = "../hydroflow_plus", version = "^0.5.0", features = [ "cli_integration" ] }
proc-macro-crate = "1.1.0"
syn = { version = "2.0.0", features = [ "parsing", "extra-traits" ] }
hydro_cli = { path = "../hydro_cli", version = "^0.5.0", optional = true }
tokio = { version = "1.16", features = [ "full" ] }
async-channel = "1.8.0"
