[package]
name = "hydroflow_plus_kvs"
publish = false
version = "0.0.0"
edition = "2021"

[lib]
path = "../hydroflow_plus_kvs_flow/src/lib.rs"

[features]
default = ["final"]
final = []

[dependencies]
hydroflow_plus = { path = "../hydroflow_plus", version = "^0.4.0" }
stageleft = { path = "../stageleft", version = "^0.4.0" }
regex = "1"
serde = "1"
hydroflow_plus_kvs_macro = { path = "../hydroflow_plus_kvs_macro" }

[build-dependencies]
stageleft_tool = { path = "../stageleft_tool", version = "^0.4.0" }
